fix overflowing table and modified colors

--- a/src/app/Pages/navbar/navbar.component.css
+++ b/src/app/Pages/navbar/navbar.component.css
@@ -1,11 +1,18 @@
+.example-spacer {
+  flex: 1 1 auto;
+}
+
 mat-toolbar a {
   text-decoration: none;
-  color: beige;
+  color: #fff;
   font-family: "Play", sans-serif;
 }
+
 mat-toolbar {
-  display: flex;
+  background: #636266;
   position: fixed;
-  justify-content: space-between;
   top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
 }
