--- a/src/app/Pages/users/users.component.css
+++ b/src/app/Pages/users/users.component.css
@@ -1,6 +1,6 @@
 table {
   width: 100%;
-  background: beige;
+  background: #fff;
 }
 
 input {
@@ -18,7 +18,7 @@ input {
 }
 
 input[type="text"] {
-  color: bisque;
+  color: rgb(249, 248, 246);
   font-family: "Play", sans-serif;
 }
 
@@ -31,13 +31,12 @@ input:hover {
 }
 
 input::placeholder {
-  color: rgb(183, 182, 182);
+  color: rgb(232, 232, 232);
 }
 
 .container {
   max-width: 1100px;
   margin: 0 auto;
-  font-family: "Play", sans-serif;
 }
 
 td {
@@ -49,6 +48,7 @@ td,
 th {
   border-bottom: 1px solid #dcdcdc;
   color: black;
+  font-family: "Play", sans-serif;
 }
 
 .avatar {
@@ -57,4 +57,15 @@ th {
   height: 50px;
   border-radius: 50%;
   background: rgb(72, 71, 71);
+}
+
+mat-paginator {
+  background: #636266;
+}
+
+@media screen and (max-width: 960px) {
+  mat-paginator {
+    position: fixed;
+    width: 100%;
+  }
 }
